set(_FILES
  edgeMesh/edgeMesh.C
  edgeMesh/edgeMeshIO.C
  edgeMesh/edgeMeshNew.C
  edgeMesh/edgeMeshFormats/edgeMeshFormatsCore.C
  edgeMesh/edgeMeshFormats/edgeMesh/edgeMeshFormat.C
  edgeMesh/edgeMeshFormats/edgeMesh/edgeMeshFormatRunTime.C
  edgeMesh/edgeMeshFormats/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormat.C
  edgeMesh/edgeMeshFormats/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormatRunTime.C
  edgeMesh/edgeMeshFormats/nas/NASedgeFormat.C
  edgeMesh/edgeMeshFormats/nas/NASedgeFormatRunTime.C
  edgeMesh/edgeMeshFormats/obj/OBJedgeFormat.C
  edgeMesh/edgeMeshFormats/obj/OBJedgeFormatRunTime.C
  edgeMesh/edgeMeshFormats/starcd/STARCDedgeFormat.C
  edgeMesh/edgeMeshFormats/starcd/STARCDedgeFormatRunTime.C
  edgeMesh/edgeMeshFormats/vtk/VTKedgeFormat.C
  edgeMesh/edgeMeshFormats/vtk/VTKedgeFormatRunTime.C
  edgeMesh/featureEdgeMesh/featureEdgeMesh.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMesh.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshNew.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormats/extendedEdgeMeshFormat/extendedEdgeMeshFormat.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormats/extendedEdgeMeshFormat/extendedEdgeMeshFormatRunTime.C
  edgeMesh/extendedEdgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMesh.C
  cellClassification/cellClassification.C
  cellClassification/cellInfo.C
  cellQuality/cellQuality.C
  patchDist/patchDistWave/patchDistWave.C
  cellFeatures/cellFeatures.C
  coordinateSystems/coordinateSystem.C
  coordinateSystems/coordinateSystemNew.C
  coordinateSystems/coordinateSystems.C
  coordinateSystems/cylindricalCS.C
  coordinateSystems/cartesianCS.C
  coordinateSystems/coordinateRotation/axesRotation.C
  coordinateSystems/coordinateRotation/coordinateRotation.C
  coordinateSystems/coordinateRotation/coordinateRotationNew.C
  coordinateSystems/coordinateRotation/EulerCoordinateRotation.C
  coordinateSystems/coordinateRotation/STARCDCoordinateRotation.C
  coordinateSystems/coordinateRotation/cylindrical.C
  edgeFaceCirculator/edgeFaceCirculator.C
  polyMeshZipUpCells/polyMeshZipUpCells.C
  meshSearch/meshSearch.C
  meshSearch/meshSearchFACE_CENTRE_TRISMeshObject.C
  meshSearch/meshSearchMeshObject.C
  meshTools/meshTools.C
  algorithms/FaceCellWave/FaceCellWaveName.C
  algorithms/PointEdgeWave/PointEdgeWaveName.C
  algorithms/PatchEdgeFaceWave/PatchEdgeFaceWaveName.C
  algorithms/PatchEdgeFaceWave/patchPatchDist.C
  regionSplit/regionSplit.C
  regionSplit/localPointRegion.C
  indexedOctree/treeDataEdge.C
  indexedOctree/treeDataFace.C
  indexedOctree/treeDataPoint.C
  indexedOctree/treeDataPrimitivePatchName.C
  indexedOctree/treeDataTriSurface.C
  searchableSurfaces/searchableSurface/searchableSurface.C
  searchableSurfaces/searchableBox/searchableBox.C
  searchableSurfaces/searchableCylinder/searchableCylinder.C
  searchableSurfaces/searchableDisk/searchableDisk.C
  searchableSurfaces/searchablePlane/searchablePlane.C
  searchableSurfaces/searchablePlate/searchablePlate.C
  searchableSurfaces/searchableSphere/searchableSphere.C
  searchableSurfaces/searchableSurfaceCollection/searchableSurfaceCollection.C
  searchableSurfaces/searchableSurfaces/searchableSurfaces.C
  searchableSurfaces/searchableSurfacesQueries/searchableSurfacesQueries.C
  searchableSurfaces/searchableSurfaceWithGaps/searchableSurfaceWithGaps.C
  searchableSurfaces/triSurfaceMesh/triSurfaceMesh.C
  searchableSurfaces/triSurfaceMesh/extractCloseness.C
  searchableSurfaces/closedTriSurfaceMesh/closedTriSurfaceMesh.C
  searchableSurfaces/searchableExtrudedCircle/searchableExtrudedCircle.C
  sets/topoSets/cellSet.C
  sets/topoSets/topoSet.C
  sets/topoSets/faceSet.C
  sets/topoSets/pointSet.C
  sets/topoSets/cellZoneSet.C
  sets/topoSets/faceZoneSet.C
  sets/topoSets/pointZoneSet.C
  sets/topoSetSource/topoSetSource.C
  sets/cellSources/faceToCell/faceToCell.C
  sets/cellSources/pointToCell/pointToCell.C
  sets/cellSources/shapeToCell/shapeToCell.C
  sets/cellSources/boxToCell/boxToCell.C
  sets/cellSources/regionToCell/regionToCell.C
  sets/cellSources/rotatedBoxToCell/rotatedBoxToCell.C
  sets/cellSources/labelToCell/labelToCell.C
  sets/cellSources/surfaceToCell/surfaceToCell.C
  sets/cellSources/cellToCell/cellToCell.C
  sets/cellSources/nearestToCell/nearestToCell.C
  sets/cellSources/nbrToCell/nbrToCell.C
  sets/cellSources/zoneToCell/zoneToCell.C
  sets/cellSources/sphereToCell/sphereToCell.C
  sets/cellSources/cylinderToCell/cylinderToCell.C
  sets/cellSources/faceZoneToCell/faceZoneToCell.C
  sets/cellSources/cylinderAnnulusToCell/cylinderAnnulusToCell.C
  sets/cellSources/targetVolumeToCell/targetVolumeToCell.C
  sets/cellSources/patchDistanceToCell/patchDistanceToCell.C
  sets/faceSources/faceToFace/faceToFace.C
  sets/faceSources/labelToFace/labelToFace.C
  sets/faceSources/cellToFace/cellToFace.C
  sets/faceSources/normalToFace/normalToFace.C
  sets/faceSources/patchToFace/patchToFace.C
  sets/faceSources/pointToFace/pointToFace.C
  sets/faceSources/boundaryToFace/boundaryToFace.C
  sets/faceSources/zoneToFace/zoneToFace.C
  sets/faceSources/boxToFace/boxToFace.C
  sets/faceSources/rotatedBoxToFace/rotatedBoxToFace.C
  sets/faceSources/regionToFace/regionToFace.C
  sets/faceSources/cylinderToFace/cylinderToFace.C
  sets/faceSources/cylinderAnnulusToFace/cylinderAnnulusToFace.C
  sets/pointSources/labelToPoint/labelToPoint.C
  sets/pointSources/pointToPoint/pointToPoint.C
  sets/pointSources/cellToPoint/cellToPoint.C
  sets/pointSources/faceToPoint/faceToPoint.C
  sets/pointSources/boxToPoint/boxToPoint.C
  sets/pointSources/surfaceToPoint/surfaceToPoint.C
  sets/pointSources/zoneToPoint/zoneToPoint.C
  sets/pointSources/nearestToPoint/nearestToPoint.C
  sets/faceZoneSources/faceZoneToFaceZone/faceZoneToFaceZone.C
  sets/faceZoneSources/setsToFaceZone/setsToFaceZone.C
  sets/faceZoneSources/setToFaceZone/setToFaceZone.C
  sets/faceZoneSources/setAndNormalToFaceZone/setAndNormalToFaceZone.C
  sets/faceZoneSources/searchableSurfaceToFaceZone/searchableSurfaceToFaceZone.C
  sets/faceZoneSources/planeToFaceZone/planeToFaceZone.C
  sets/cellZoneSources/setToCellZone/setToCellZone.C
  sets/pointZoneSources/setToPointZone/setToPointZone.C
  sets/polyCellSet/polyCellSet.C
  momentOfInertia/momentOfInertia.C
  surfaceSets/surfaceSets.C
  triSurface/orientedSurface/orientedSurface.C
  triSurface/surfaceLocation/surfaceLocation.C
  triSurface/booleanOps/surfaceIntersection/surfaceIntersection.C
  triSurface/booleanOps/surfaceIntersection/surfaceIntersectionFuncs.C
  triSurface/booleanOps/surfaceIntersection/edgeIntersections.C
  triSurface/booleanOps/booleanSurface/booleanSurface.C
  triSurface/booleanOps/intersectedSurface/intersectedSurface.C
  triSurface/booleanOps/intersectedSurface/edgeSurface.C
  triSurface/triSurfaceSearch/triSurfaceSearch.C
  triSurface/triSurfaceSearch/triSurfaceRegionSearch.C
  triSurface/triangleFuncs/triangleFuncs.C
  triSurface/surfaceFeatures/surfaceFeatures.C
  triSurface/triSurfaceTools/triSurfaceTools.C
  triSurface/triSurfaceTools/geompack/geompack.C
  triSurface/triSurfaceTools/pointToPointPlanarInterpolation.C
  twoDPointCorrector/twoDPointCorrector.C
  patchToPatchTools/patchToPatchTools.C
  patchToPatch/patchToPatch/patchToPatch.C
  patchToPatch/patchToPatch/patchToPatchParallelOps.C
  patchToPatch/matching/matchingPatchToPatch.C
  patchToPatch/nearby/nearbyPatchToPatch.C
  patchToPatch/nearest/nearestPatchToPatch.C
  patchToPatch/inverseDistance/inverseDistancePatchToPatch.C
  patchToPatch/intersection/intersectionPatchToPatch.C
  patchToPatch/rays/raysPatchToPatch.C
  patchToPatch/patchToPatchStabilisation/patchToPatchStabilisation.C
  cellsToCells/cellsToCells/cellsToCells.C
  cellsToCells/cellsToCells/cellsToCellsParallelOps.C
  cellsToCells/matching/matchingCellsToCells.C
  cellsToCells/nearest/nearestCellsToCells.C
  cellsToCells/intersection/intersectionCellsToCells.C
  cellsToCells/cellsToCellsStabilisation/cellsToCellsStabilisation.C
  meshToMesh/meshToMesh.C
  mappedPatches/mappedPatchBase/mappedPatchBase.C
  mappedPatches/mappedPolyPatch/mappedPolyPatch.C
  mappedPatches/mappedPolyPatch/mappedWallPolyPatch.C
  mappedPatches/mappedPointPatch/mappedPointPatch.C
  mappedPatches/mappedPointPatch/mappedWallPointPatch.C
  mappedPatches/mappedExtrudedPatchBase/mappedExtrudedPatchBase.C
  mappedPatches/mappedExtrudedPolyPatch/mappedExtrudedWallPolyPatch.C
  mappedPatches/mappedExtrudedPointPatch/mappedExtrudedWallPointPatch.C
  mappedPatches/mappedInternalPatchBase/mappedInternalPatchBase.C
  mappedPatches/mappedInternalPolyPatch/mappedInternalPolyPatch.C
  mappedPatches/mappedInternalPointPatch/mappedInternalPointPatch.C
  meshStructure/meshStructure.C
  meshStructure/topoDistanceData.C
  meshStructure/pointTopoDistanceData.C
  tetOverlapVolume/tetOverlapVolume.C
  triIntersect/triIntersect.C
  triIntersect/triIntersectLocationIO.C
  cutPoly/cellEdgeAddressing.C
  cutPoly/cutPoly.C
  cutPoly/cutPolyIsoSurface.C
  nonConformal/polyPatches/nonConformal/nonConformalPolyPatch.C
  nonConformal/polyPatches/nonConformalCoupled/nonConformalCoupledPolyPatch.C
  nonConformal/polyPatches/nonConformalCyclic/nonConformalCyclicPolyPatch.C
  nonConformal/polyPatches/nonConformalError/nonConformalErrorPolyPatch.C
  nonConformal/polyPatches/nonConformalProcessorCyclic/nonConformalProcessorCyclicPolyPatch.C
  nonConformal/pointPatches/nonConformalCyclic/nonConformalCyclicPointPatch.C
  nonConformal/pointPatches/nonConformalError/nonConformalErrorPointPatch.C
  nonConformal/pointPatches/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatch.C
  nonConformal/pointPatchFields/nonConformalCyclic/nonConformalCyclicPointPatchFields.C
  nonConformal/pointPatchFields/nonConformalError/nonConformalErrorPointPatchFields.C
  nonConformal/pointPatchFields/nonConformalProcessorCyclic/nonConformalProcessorCyclicPointPatchFields.C
  nonConformal/boundary/nonConformalBoundary.C
)
add_library(meshTools ${_FILES})
target_compile_features(meshTools PUBLIC cxx_std_11)
target_include_directories(meshTools PUBLIC /Users/hsor001/Projects/opensource/openfoam/src/meshTools/include PRIVATE /Users/hsor001/Projects/opensource/openfoam/src/meshTools/includePrivate)
